terraform-task/vpc.tf

# Internet VPC
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/26"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"
  tags = {
    Name = "main"
  }
}

# Subnets
resource "aws_subnet" "main-public-1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.0.0/28"
  map_public_ip_on_launch = "true"
  availability_zone       = "ap-south-1a"

  tags = {
    Name = "main-public-1"
  }
}

#resource "aws_subnet" "main-public-2" {
# vpc_id                  = aws_vpc.main.id
# cidr_block              = "10.0.0.16/28"
#  map_public_ip_on_launch = "true"
#  availability_zone       = "ap-south-1b"

# tags = {
#   Name = "main-public-2"
#  }
#}


#resource "aws_subnet" "main-private-1" {
#  vpc_id                  = aws_vpc.main.id
#  cidr_block              = "10.0.0.32/28"
#  map_public_ip_on_launch = "false"
# availability_zone       = "ap-south-1a"

#  tags = {
#    Name = "main-private-1"
#  }
#}


#resource "aws_subnet" "main-private-2" {
#  vpc_id                  = aws_vpc.main.id
#  cidr_block              = "10.0.0.48/28"
#  map_public_ip_on_launch = "false"
#  availability_zone       = "ap-south-1b"

#  tags = {
#    Name = "main-private-2"
#  }
#}


# Internet GW
resource "aws_internet_gateway" "main-gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

# route tables
resource "aws_route_table" "main-public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main-gw.id
  }

  tags = {
    Name = "main-public-1"
  }
}

# route associations public
resource "aws_route_table_association" "main-public-1-a" {
  subnet_id      = aws_subnet.main-public-1.id
  route_table_id = aws_route_table.main-public.id
}

#resource "aws_route_table_association" "main-public-2-a" {
#  subnet_id      = aws_subnet.main-public-2.id
#  route_table_id = aws_route_table.main-public.id
#}


#resource "aws_route_table" "main-private" {
# vpc_id = aws_vpc.main.id
#  route {
#    cidr_block     = "0.0.0.0/0"
#    nat_gateway_id = aws_nat_gateway.nat-gw.id
#  }

#  tags = {
#   Name = "main-private-1"
#  }
#}

# route associations private
#resource "aws_route_table_association" "main-private-1-a" {
#  subnet_id      = aws_subnet.main-private-1.id
#  route_table_id = aws_route_table.main-private.id
#}

#resource "aws_route_table_association" "main-private-2-a" {
# subnet_id      = aws_subnet.main-private-2.id
#  route_table_id = aws_route_table.main-private.id
#}


# nat gw
#resource "aws_eip" "nat" {
#  vpc = true
#}

#resource "aws_nat_gateway" "nat-gw" {
#  allocation_id = aws_eip.nat.id
# subnet_id     = aws_subnet.main-public-1.id
# depends_on    = [aws_internet_gateway.main-gw]
#}
